--- a/MCrypt/Properties/Resources.resx
+++ b/MCrypt/Properties/Resources.resx
@@ -178,4 +178,10 @@
   <data name="lock64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lock64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="fr_MCrypt_resources" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fr\MCrypt.resources.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="fr_MUpdate_resources" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fr\MUpdate.resources.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
