--- a/MCrypt/Properties/Resources.resx
+++ b/MCrypt/Properties/Resources.resx
@@ -130,17 +130,14 @@
   <data name="Microsoft.WindowsAPICodePack_ShellExtensions" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Microsoft.WindowsAPICodePack.ShellExtensions.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="lock3_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\3.0.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="lock128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lock1281.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Microsoft.WindowsAPICodePack_Shell" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Microsoft.WindowsAPICodePack.Shell.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="Microsoft.WindowsAPICodePack" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Microsoft.WindowsAPICodePack.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="System.Runtime.CompilerServices.Unsafe" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\System.Runtime.CompilerServices.Unsafe.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="MetroFramework.Design" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MetroFramework.Design.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -151,8 +148,11 @@
   <data name="MetroFramework.Fonts" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MetroFramework.Fonts.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="System.Buffers" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\System.Buffers.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="System.Runtime.CompilerServices.Unsafe" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\System.Runtime.CompilerServices.Unsafe.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="fr_MCrypt_resources" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fr\MCrypt.resources.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="System.Memory" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\System.Memory.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -160,28 +160,31 @@
   <data name="MetroFramework" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\MetroFramework.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="key20" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\key20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="search20" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\search20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="file20" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\file20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="MUpdate" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\MUpdate.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="lock128" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\lock1281.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="System.Buffers" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\System.Buffers.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="lock64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\lock64.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="fr_MCrypt_resources" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\fr\MCrypt.resources.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="search20" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\search20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="key20" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\key20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="file20" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\file20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="fr_MUpdate_resources" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\fr\MUpdate.resources.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="MUpdate" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\MUpdate.dll;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="lock3_0" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\3.0.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="zip20mod" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\zip20mod.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
