--- a/MCrypt/UI/DecryptForm.fr.resx
+++ b/MCrypt/UI/DecryptForm.fr.resx
@@ -117,9 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="metroProgressSpinner1.ToolTip" xml:space="preserve">
-    <value />
-  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="lblDecrypt.Size" type="System.Drawing.Size, System.Drawing">
     <value>103, 30</value>
@@ -127,17 +124,8 @@
   <data name="lblDecrypt.Text" xml:space="preserve">
     <value>Décrypter</value>
   </data>
-  <data name="lblDecrypt.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="btnDecrypt.Text" xml:space="preserve">
+  <data name="decryptBtn.Text" xml:space="preserve">
     <value>&amp;Décrypter</value>
-  </data>
-  <data name="btnDecrypt.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="tbPassword.ToolTip" xml:space="preserve">
-    <value />
   </data>
   <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
     <value>82, 13</value>
@@ -145,53 +133,26 @@
   <data name="label2.Text" xml:space="preserve">
     <value>Mot de passe :</value>
   </data>
-  <data name="label2.ToolTip" xml:space="preserve">
-    <value />
+  <data name="aboutLink.ToolTip" xml:space="preserve">
+    <value>À propos de MCrypt</value>
   </data>
-  <data name="lblMcrypt.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="pictureBox2.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="rdobtnDecryptAndSave.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="decryptAndSaveRdoBtn.Size" type="System.Drawing.Size, System.Drawing">
     <value>146, 17</value>
   </data>
-  <data name="rdobtnDecryptAndSave.Text" xml:space="preserve">
+  <data name="decryptAndSaveRdoBtn.Text" xml:space="preserve">
     <value>Décrypter et enregistrer</value>
   </data>
-  <data name="rdobtnDecryptAndSave.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="rdobtnOpenTemp.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="openTmpRdoBtn.Size" type="System.Drawing.Size, System.Drawing">
     <value>189, 17</value>
   </data>
-  <data name="rdobtnOpenTemp.Text" xml:space="preserve">
+  <data name="openTmpRdoBtn.Text" xml:space="preserve">
     <value>Ouvrir le fichier temporairement</value>
-  </data>
-  <data name="rdobtnOpenTemp.ToolTip" xml:space="preserve">
-    <value />
   </data>
   <data name="label3.Size" type="System.Drawing.Size, System.Drawing">
     <value>43, 13</value>
   </data>
   <data name="label3.Text" xml:space="preserve">
     <value>Mode :</value>
-  </data>
-  <data name="label3.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="panelMode.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="pbKey.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="lblStatus.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="saveDirectoryUC.ToolTip" xml:space="preserve">
-    <value />
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -27599,10 +27560,11 @@
         /////////////////////////////////////////////////////////////////////////////w==
 </value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>Inherit</value>
+  </data>
   <data name="$this.Text" xml:space="preserve">
     <value>MCrypt Décrypter</value>
-  </data>
-  <data name="$this.ToolTip" xml:space="preserve">
-    <value />
   </data>
 </root>
